@@ -168,14 +168,14 @@ setAs("URI", "character",
 
 
 getHTMLLinks =
-function(doc, externalOnly = TRUE, xpquery = "//a/@href")
+function(doc, externalOnly = TRUE, xpQuery = "//a/@href")
 {
   if(is.character(doc))
      doc = htmlParse(doc)
 
-  links = as.character(getNodeSet(doc, xpquery))
+  links = as.character(getNodeSet(doc, xpQuery))
   if(externalOnly)
-    grep("^#", links, value = TRUE, invert = TRUE)
+      grep("^#", links, value = TRUE, invert = TRUE)
   else
-    links
+     links
 }
