@@ -1,7 +1,17 @@
 Version 3.94-0
 
+  *     xpathApply() and related functions work with builtin type "functions", 
+        e.g. class.
+
+  *     xpathApply() and related functions (getNodeSet, xpathSApply) allow
+        the caller to specify multiple queries as a character vector
+        and these are pasted together as compound location paths by
+        separating them with a '|'.  This makes it easier for the
+        caller to manage the different queries.
+
   *     assigning to a child of a node works, e.g. node[["abc"]] = text/node
-        and node[[index]] = text/node.
+        and node[[index]] = text/node.  We replace a matching name.  If the
+        replacement value is text, we use the name to 
 
   *     getChildrenStrings() is a function that implements the equivalent of
         xmlApply(node, xmlValue) but faster because we avoid the function call
